# internal/swagger/swagger.json
@@ -379,6 +379,11 @@
         },
         "/api/libraries/{libraryId}/entries/move": {
             "post": {
+                "security": [
+                    {
+                        "OAuth2": []
+                    }
+                ],
                 "produces": [
                     "application/json"
                 ],
